# python-weatherkit

./: LICENSE  README.md  pyproject.toml
apple_weatherkit/: __init__.py  client.py
