[tool.poetry]
name = "apple_weatherkit"
version = "1.1.3"
description = "Python client for Apple WeatherKit API"
authors = ["TJ Horner <me@tjhorner.com>"]
readme = "README.md"
repository = "https://github.com/tjhorner/python-weatherkit"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
pyjwt = {version = "==2.*", extras = ["crypto"]}
aiohttp-retry = "^2.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
